<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_outline_logout_24"/>
    <item
        android:id="@+id/add_item"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_outline_add_box_24"/>
    <item
        android:id="@+id/inventory"
        android:title="@string/menu_inventory"
        android:icon="@drawable/ic_outline_inventory_24"/>
    <item
        android:id="@+id/admin"
        android:title="@string/admin_menu"
        android:icon="@drawable/ic_baseline_admin_panel_settings_24"
...
